--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "core-js": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.2.3"
   },
   "babel": {
     "presets": [
