--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "@types/socket.io-client": "^1.4.36",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^3.4.0",
@@ -42,6 +43,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.12.0",
+    "socket.io-client": "^4.0.1",
     "styled-components": "^5.2.3"
   },
   "babel": {
