--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "clsx": "^1.1.1",
     "core-js": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
