--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
-    "@types/socket.io-client": "^1.4.36",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^3.4.0",
@@ -37,16 +36,10 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "clsx": "^1.1.1",
     "core-js": "^3.5.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^16.12.0",
-    "socket.io-client": "^4.0.1",
-    "styled-components": "^5.2.3"
+    "react-dom": "^16.12.0"
   },
   "babel": {
     "presets": [
